--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # Local .terraform directories
 **/.terraform/*
 
+
+trace.log
+.terraform.lock.hcl
+
 # .tfstate files
 *.tfstate
 *.tfstate.*
@@ -27,3 +31,4 @@ override.tf.json
 
 # Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
 # example: *tfplan*
+tfplan
